# aiagents

./: .env.example  .gitignore  Dockerfile.qdrant  docker-compose.yml  readme.md  readme.scope.md
backend/: Dockerfile.dev  alembic.ini  pyproject.toml
backend/app/: =0.12.0  =0.3.35  =1.52.0  main.py  pip.sh
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  migrations.py  module_loader.py  qdrant_client.py  security.py
backend/app/migrations/: README  env.py
backend/app/migrations/versions/: 286230188316_init.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/catalog/: __init__.py  bootstrap.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/chat/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/llm/: __init__.py  base.py  factory.py  openai_provider.py
backend/app/modules/maintenance/: __init__.py  router.py
backend/app/modules/rag/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/rag/pipeline/: __init__.py  chunking.py  dto.py  embeddings.py  extractors.py  ingest.py  sources.py  storage.py  text_utils.py  token_utils.py
backend/app/modules/users/: __init__.py  bootstrap.py  models.py  repository.py  router.py  schemas.py  service.py
frontend/: Dockerfile.dev  package-lock.json
frontend/app/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/register/: route.ts
frontend/app/api/catalog/agents/: route.ts
frontend/app/api/catalog/agents/[agentId]/: route.ts
frontend/app/api/catalog/areas/: route.ts
frontend/app/api/catalog/areas/[areaId]/: route.ts
frontend/app/api/catalog/roles/: route.ts
frontend/app/api/catalog/roles/[roleId]/: route.ts
frontend/app/api/chatbot/query/: route.ts
frontend/app/api/chatbot/sessions/: route.ts
frontend/app/api/chatbot/sessions/[sessionId]/: route.ts
frontend/app/api/rag/ingest/: route.ts
frontend/app/api/rag/jobs/: route.ts
frontend/app/auth/: page.tsx
frontend/app/catalog/: CatalogClient.tsx  page.tsx
frontend/app/chat/: ChatClient.tsx  page.tsx
frontend/app/me/: LogoutButton.tsx  page.tsx
frontend/app/menu/: MenuClient.tsx  page.tsx
(+1 files in other folders)
