[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlv2-backend"
version = "0.1.0"
description = "Modular FastAPI backend with auto migrations"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.8.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["migrations/**/*.mako", "migrations/**/*.py"]

